--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "compile:sass": "node-sass main/style.scss main/style.css"
+    "compile:sass": "node-sass sass/app.scss main.css"
   },
   "author": "",
   "license": "ISC",
